Added Edit page, ability to update any entry, view entries, and also added the edit_last timestamp to the Entries table in database

--- a/templates/_archive.html
+++ b/templates/_archive.html
@@ -65,7 +65,7 @@
                                 </div>
 
                                 <div class="author-links">
-                                    <a href="#" class="edit-btn pull-right">
+                                    <a href="{{ url_for('edit_page', entry_id=entry.id) }}" class="edit-btn pull-right">
                                         <span class="glyphicon glyphicon-star"></span>
                                             Edit
                                         <span class="glyphicon glyphicon-star"></span>
