--- a/templates/basic-layout.html
+++ b/templates/basic-layout.html
@@ -21,6 +21,9 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- CKEditor -->
+    <script src="//cdn.ckeditor.com/4.4.7/standard/ckeditor.js"></script>
 </head>
 
 <body>
